--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -396,6 +396,10 @@ nav:
             - node/modes/full-node.md
             - Light Full Node: node/modes/light-full-node.md
             - Pruned Full Node: node/modes/pruned-full-node.md
+          - Light Modes: 
+            - Digest State: node/digest-state.md
+            - History Pruning: node/history-pruning.md
+            - Snapshots: node/snapshots.md
           - Light SPV: 
             - node/modes/light-spv-node.md
             - SPV: node/modes/spv.md
@@ -413,7 +417,6 @@ nav:
           
             # - Modifiers Exchange: dev/p2p/modifiers.md
             # - BlockP2P: dev/p2p/BlockP2P.md
-      
         - Configuration:
           - Node Wallet: 
             - node/wallet.md
@@ -435,10 +438,7 @@ nav:
               - scorex: node/conf/conf-scorex.md
               - critical-dispatcher: node/conf/conf-crit.md
               - api-dispatcher: node/conf/conf-api.md
-        #- Light Modes: 
-        #  - Digest State: node/digest-state.md
-        #  - History Pruning: node/history-pruning.md
-        #  - Snapshots: node/snapshots.md
+
       - Explorer: 
         - dev/stack/explorer.md
         - Local Setup: dev/stack/explorer/explorer_local.md
