--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,6 +169,8 @@ nav:
       - Sidechains: 
         - uses/sidechains.md
         - ErgoData: uses/ErgoData.md
+        - SentientChain: uses/sentientchain.md
+        - PoUW: uses/pouw.md
       - Hardware:
         - ErgoPOS: eco/ergopos.md
         
