utxo snapshots update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -436,7 +436,9 @@ nav:
               - node/modes/light-full-node.md
               - Digest State: node/digest-state.md
               - History Pruning: node/history-pruning.md
-              - Pruned Full Node: node/modes/pruned-full-node.md
+              - Pruned Full Node: 
+                - node/modes/pruned-full-node.md
+                - Implementation: node/modes/pruned-impl.md
             - SPV: 
               - node/modes/spv.md
               - Light SPV: node/modes/light-spv-node.md
