--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -591,7 +591,7 @@ nav:
           - FlowCards: dev/scs/flowcards.md
         - ErgoTree: 
           - dev/scs/ergotree.md
-          #- Introduction: dev/scs/ergotree/ergotree-intro.md
+          - Introduction: dev/scs/ergotree/ergotree-intro.md
           - As a Language: dev/scs/ergotree/ergotree-lang.md
           - Typing: dev/scs/ergotree/typing.md
           - Evaluation: dev/scs/ergotree/evaluation.md
@@ -651,6 +651,7 @@ nav:
       - Operating Systems: mining/os.md
       - Overclocking: mining/overclocking.md
       - Solo Mining: mining/setup/solo.md
+      - Pools: mining/pools.md
       - Host a Pool: 
         - mining/setup/pool.md
         - Node Configuration: mining/setup/solo-node.md
